--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -5,3 +5,16 @@
 Login_Head=Login
 EmptyFields=Required fields are empty
 InvalidLogin=Invalid user
+Dashboard_Screen=Dashboard
+MasterTabCaption=Masters
+TransactionTabCaption=Transaction
+SettingsTabCaption=Settings
+
+Customer_Menu_Caption=Customer
+Labor_Menu_Caption=Labor
+Quotation_Menu_Caption=Quotation
+Contract_Menu_Caption=Contract
+Labor_Charge_Menu_Caption=Labor Charge
+Material_Menu_Caption=Material
+Report_Menu_Caption=Report
+Exit_Menu_Caption=Exit
