--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -6,15 +6,16 @@ Login_Head=Login
 EmptyFields=Required fields are empty
 InvalidLogin=Invalid user
 Dashboard_Screen=Dashboard
+Labor_Screen = Labor
+
 MasterTabCaption=Masters
-TransactionTabCaption=Transaction
 SettingsTabCaption=Settings
 
 Customer_Menu_Caption=Customer
 Labor_Menu_Caption=Labor
-Quotation_Menu_Caption=Quotation
+Quotation_Menu_Caption=Quote
 Contract_Menu_Caption=Contract
-Labor_Charge_Menu_Caption=Labor Charge
+Labor_Charge_Menu_Caption=Wage
 Material_Menu_Caption=Material
 Report_Menu_Caption=Report
 Exit_Menu_Caption=Exit
