--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/CARS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.mysql-connector-java-8.0.13.jar=lib/mysql-connector-java-8.0.13.jar
 file.reference.org.json.jar=lib/org.json.jar
 includes=**
@@ -38,7 +39,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.13.jar}:\
     ${file.reference.org.json.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
