Labor screen completed

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -19,3 +19,6 @@ Labor_Charge_Menu_Caption=Wage
 Material_Menu_Caption=Material
 Report_Menu_Caption=Report
 Exit_Menu_Caption=Exit
+
+Success=Success
+SuccessMessage= Data updated successfully.
