Adding Registration Screen

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -7,6 +7,7 @@ EmptyFields=Required fields are empty
 InvalidLogin=Invalid user
 Dashboard_Screen=Dashboard
 Labor_Screen = Labor
+Registration_Screen = Registration
 
 MasterTabCaption=Masters
 SettingsTabCaption=Settings
@@ -22,3 +23,6 @@ Exit_Menu_Caption=Exit
 
 Success=Success
 SuccessMessage= Data updated successfully.
+
+PasswordMessage= Password should be same.
+InvalidEmail= Please enter a valid email address
