--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -7,6 +7,7 @@ EmptyFields=Required fields are empty
 InvalidLogin=Invalid user
 Dashboard_Screen=Dashboard
 Labor_Screen = Labor
+Quotation_Screen = Quotation
 
 MasterTabCaption=Masters
 SettingsTabCaption=Settings
@@ -19,6 +20,9 @@ Labor_Charge_Menu_Caption=Wage
 Material_Menu_Caption=Material
 Report_Menu_Caption=Report
 Exit_Menu_Caption=Exit
+
+Quotation_Dialogue_Caption=New Quotation
+Quotation_Dialogue_Question=Do you want to copy information from another quotation, Please enter Quote number?
 
 Success=Success
 SuccessMessage= Data updated successfully.
