Added File chooser option in Registration screen

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -30,3 +30,4 @@ SuccessMessage= Data updated successfully.
 
 PasswordMessage= Password should be same.
 InvalidEmail= Please enter a valid email address
+ChooseLogo= Please choose a logo image
