--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -23,7 +23,7 @@ Report_Menu_Caption=Report
 Exit_Menu_Caption=Exit
 
 Quotation_Dialogue_Caption=New Quotation
-Quotation_Dialogue_Question=Do you want to copy information from another quotation, Please enter Quote number?
+Quotation_Dialogue_Question=Do you want to copy information from another quotation,\n Please enter Quote number?
 
 Success=Success
 SuccessMessage= Data updated successfully.
