Adding Customer Screen

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -31,3 +31,5 @@ SuccessMessage= Data updated successfully.
 PasswordMessage= Password should be same.
 InvalidEmail= Please enter a valid email address
 ChooseLogo= Please choose a logo image
+
+Customer_Screen = Customer
