Adding MATERIAL screen.

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -33,3 +33,4 @@ InvalidEmail= Please enter a valid email address
 ChooseLogo= Please choose a logo image
 
 Customer_Screen = Customer
+Material_Screen = Material
