--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -17,7 +17,7 @@ Customer_Menu_Caption=Customer
 Labor_Menu_Caption=Labor
 Quotation_Menu_Caption=Quote
 Contract_Menu_Caption=Contract
-Labor_Charge_Menu_Caption=Wage
+Labor_Charge_Menu_Caption=Report
 Material_Menu_Caption=Material
 Report_Menu_Caption=Report
 Exit_Menu_Caption=Exit
@@ -31,3 +31,6 @@ SuccessMessage= Data updated successfully.
 PasswordMessage= Password should be same.
 InvalidEmail= Please enter a valid email address
 ChooseLogo= Please choose a logo image
+ReportNotAvailable = Reports not configured in this system
+ReportValidation = Please select valid start and end date
+ReportExportError = Report export error.
