--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,12 @@ excludes=
 file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.mysql-connector-java-8.0.13.jar=lib/mysql-connector-java-8.0.13.jar
 file.reference.org.json.jar=lib/org.json.jar
+file.reference.poi-4.0.1.jar=lib/poi-4.0.1.jar
+file.reference.poi-examples-4.0.1.jar=lib/poi-examples-4.0.1.jar
+file.reference.poi-excelant-4.0.1.jar=lib/poi-excelant-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=lib/poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=lib/poi-ooxml-schemas-4.0.1.jar
+file.reference.poi-scratchpad-4.0.1.jar=lib/poi-scratchpad-4.0.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -40,7 +46,13 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.13.jar}:\
     ${file.reference.org.json.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.jdatepicker-1.3.4.jar}
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-examples-4.0.1.jar}:\
+    ${file.reference.poi-excelant-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.poi-scratchpad-4.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
