--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -17,7 +17,7 @@ Customer_Menu_Caption=Customer
 Labor_Menu_Caption=Labor
 Quotation_Menu_Caption=Quote
 Contract_Menu_Caption=Contract
-Labor_Charge_Menu_Caption=Wage
+Labor_Charge_Menu_Caption=Report
 Material_Menu_Caption=Material
 Report_Menu_Caption=Report
 Exit_Menu_Caption=Exit
@@ -35,3 +35,4 @@ ChooseLogo= Please choose a logo image
 Customer_Screen = Customer
 Material_Screen = Material
 Contract_Screen = Contract
+Report_Screen = Report
