--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -36,3 +36,6 @@ Customer_Screen = Customer
 Material_Screen = Material
 Contract_Screen = Contract
 Report_Screen = Report
+
+User_Details_Query = SELECT ud.id, ud.Name , ud.CompanyName , ud.CompanyRegNo , ud.CompanyGST , ud.Email , ud.MobileNo , ud.CompanyTin , ud.LogoPath , ld.UserName , ld.Password FROM userdetails ud cross join logindetails ld
+User_Not_Registered = Please register.
