DB handling with labor

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -39,3 +39,4 @@ Report_Screen = Report
 
 User_Details_Query = SELECT ud.id, ud.Name , ud.CompanyName , ud.CompanyRegNo , ud.CompanyGST , ud.Email , ud.MobileNo , ud.CompanyTin , ud.LogoPath , ld.UserName , ld.Password FROM userdetails ud cross join logindetails ld
 User_Not_Registered = Please register.
+Failed_To_Update=Failed to update data.
