--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -40,3 +40,6 @@ Report_Screen = Report
 User_Details_Query = SELECT ud.id, ud.Name , ud.CompanyName , ud.CompanyRegNo , ud.CompanyGST , ud.Email , ud.MobileNo , ud.CompanyTin , ud.LogoPath , ld.UserName , ld.Password FROM userdetails ud cross join logindetails ld
 User_Not_Registered = Please register.
 Failed_To_Update=Failed to update data.
+Failed_To_Upload=Failed to Upload the data, Please check.
+Data_Uploded=Data Uploaded.
+Invalid_File=Invalid file.
