Labor wage screen and reference number

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -17,7 +17,7 @@ Customer_Menu_Caption=Customer
 Labor_Menu_Caption=Labor
 Quotation_Menu_Caption=Quote
 Contract_Menu_Caption=Contract
-Labor_Charge_Menu_Caption=Report
+Labor_Charge_Menu_Caption=Daily Wage
 Material_Menu_Caption=Material
 Report_Menu_Caption=Report
 Exit_Menu_Caption=Exit
