--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.jar=${dist.dir}/CARS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.core-renderer-minimal.jar=lib/core-renderer-minimal.jar
+file.reference.core-renderer.jar=lib/core-renderer.jar
+file.reference.iText-2.0.8.jar=lib/iText-2.0.8.jar
 file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.mysql-connector-java-8.0.13.jar=lib/mysql-connector-java-8.0.13.jar
 file.reference.org.json.jar=lib/org.json.jar
@@ -38,6 +41,7 @@ file.reference.poi-excelant-4.0.1.jar=lib/poi-excelant-4.0.1.jar
 file.reference.poi-ooxml-4.0.1.jar=lib/poi-ooxml-4.0.1.jar
 file.reference.poi-ooxml-schemas-4.0.1.jar=lib/poi-ooxml-schemas-4.0.1.jar
 file.reference.poi-scratchpad-4.0.1.jar=lib/poi-scratchpad-4.0.1.jar
+file.reference.xml-apis-xerces-2.9.1.jar=lib/xml-apis-xerces-2.9.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -52,7 +56,11 @@ javac.classpath=\
     ${file.reference.poi-excelant-4.0.1.jar}:\
     ${file.reference.poi-ooxml-4.0.1.jar}:\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
-    ${file.reference.poi-scratchpad-4.0.1.jar}
+    ${file.reference.poi-scratchpad-4.0.1.jar}:\
+    ${file.reference.core-renderer-minimal.jar}:\
+    ${file.reference.core-renderer.jar}:\
+    ${file.reference.iText-2.0.8.jar}:\
+    ${file.reference.xml-apis-xerces-2.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
