labor wage screen

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -43,3 +43,4 @@ Failed_To_Update=Failed to update data.
 Failed_To_Upload=Failed to Upload the data, Please check.
 Data_Uploded=Data Uploaded.
 Invalid_File=Invalid file.
+Labor_Not_Assigned=Labors not available for the selected contract.
