--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -45,3 +45,5 @@ Data_Uploded=Data Uploaded.
 Invalid_File=Invalid file.
 Labor_Not_Assigned=Labors not available for the selected contract.
 Invalid_Material_Code=Invalid material code.
+Labor_Wage_Screen=Daily Wage
+ReportValidation = Please select start and end date.
