Chnages for Quotations

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -47,3 +47,9 @@ Labor_Not_Assigned=Labors not available for the selected contract.
 Invalid_Material_Code=Invalid material code.
 Labor_Wage_Screen=Daily Wage
 ReportValidation = Please select start and end date.
+
+Quotation_Print= Print Quotation
+Quotation_Print_Message= Do you want to print quotation
+
+Error= Error
+Error_Quotation_Print_Message= Can't generate Quotation report!!
