Changes for Contract

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -53,3 +53,7 @@ Quotation_Print_Message= Do you want to print quotation
 
 Error= Error
 Error_Quotation_Print_Message= Can't generate Quotation report!!
+
+SelectContract= Please select a contact to update
+EmptyQuotationFields= Please enter value for Quotation
+InvalidQuotationFields= Please enter a valid Quotation
