Add Labor charge issue fix

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -57,3 +57,4 @@ Error_Quotation_Print_Message= Can't generate Quotation report!!
 SelectContract= Please select a contact to update
 EmptyQuotationFields= Please enter value for Quotation
 InvalidQuotationFields= Please enter a valid Quotation
+NoDataToSave= No data to save
