Changes for quot print

--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -58,3 +58,4 @@ SelectContract= Please select a contact to update
 EmptyQuotationFields= Please enter value for Quotation
 InvalidQuotationFields= Please enter a valid Quotation
 NoDataToSave= No data to save
+Material_Already_There=Material already there in the list
