--- a/src/appResources/Strings.properties
+++ b/src/appResources/Strings.properties
@@ -32,7 +32,7 @@ PasswordMessage= Password should be same.
 InvalidEmail= Please enter a valid email address
 ChooseLogo= Please choose a logo image
 
-Customer_Screen = Closure
+Customer_Screen = Customer
 Material_Screen = Material
 Contract_Screen = Contract
 Report_Screen = Report
